src/objects/AutomationEdge__AEConfig__c.object
<CustomObject>
    <description>Configuration Data for AutomationEdge</description>
    <fields>
        <fullName>AutomationEdge__Attributes__c</fullName>
        <label>Attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Entry_Criteria__c</fullName>
        <label>Entry Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Queue_Assignment__c</fullName>
        <label>Queue Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Scheduler_Delayed_Time__c</fullName>
        <label>Scheduler Delayed Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Scheduler_TimeWindow__c</fullName>
        <label>Scheduler TimeWindow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Scheduler_Type__c</fullName>
        <label>Scheduler Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Time Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationEdge__Service_Request_Name__c</fullName>
        <label>Service Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__UniqueSourceID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueSourceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Workflow_Name__c</fullName>
        <label>Workflow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__isQueueable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isQueueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__isScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isScheduled</label>
        <type>Checkbox</type>
    </fields>
    <label>Automation Config</label>
    <listViews>
        <fullName>AutomationEdge__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Config-{0000}</displayFormat>
        <label>AEConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>